package Enities.Fields;

public class Start extends Field {



    public Start(String s) {
        super(s);
    }

    public String getName() {
        return super.getName();
    }



    @Override
    public Field executeFieldAction(FieldAction fieldAction) {
        return null;
    }
}
