@startuml
left to right direction
class enities.fields.Ferry {
+ int getRent(int)
+ String getName()
+ int getPrice()
+ int getHousePrice()
+ Field executeFieldAction(FieldAction)
}
class enities.fields.Street {
~ Color color
+ int getPrice()
+ int getHousePrice()
+ String getName()
+ int getRent(int)
+ int getHouses()
+ void setHouses(int)
+ Field executeFieldAction(FieldAction)
}
class enities.fields.Tax {
~ int price
~ int percentPrice
+ int getPrice()
+ void setPrice(int)
+ int getPercentPrice()
+ void setPercentPrice(int)
+ Field executeFieldAction(FieldAction)
}
class enities.fields.Start {
+ String getName()
+ Field executeFieldAction(FieldAction)
}
class enities.fields.ChanceField {
+ String getName()
+ Field executeFieldAction(FieldAction)
}
class enities.fields.Jail {
+ String getName()
+ Field executeFieldAction(FieldAction)
}
class enities.fields.Brewery {
+ int getPrice()
+ int getHousePrice()
+ Field executeFieldAction(FieldAction)
+ int getRent(int)
+ String getName()
}
abstract class enities.fields.Field {
- int position
- String name
# FieldPair pair
+ FieldPair getPair()
+ int getPosition()
# void parse(String)
+ {abstract}Field executeFieldAction(FieldAction)
+ String getName()
+ String getHTMLDescription()
+ void setPair(FieldPair)
}
abstract class enities.fields.RentableField {
~ int price
~ int housePrice
~ int houses
- int[] rent
- String ownerName
+ int getHouses()
+ void setHouses(int)
+ int getPrice()
+ int getHousePrice()
+ void BuyProperty()
+ int getRent(int)
+ String getOwner()
+ void setOwnerName(String)
}
class enities.fields.FieldPair {
- Color backgroundColor
- Color foregroundColor
- int[] fieldIds
+ int[] getFieldIds()
+ Color getBackgroundColor()
+ Color getForegroundColor()
}
class enities.fields.Parking {
+ String getName()
+ Field executeFieldAction(FieldAction)
}
interface enities.fields.FieldAction {
~ Field streetAction(Street)
~ void streetPayRentToOwner(Street)
~ boolean streetPlayerOwnsPair(Street)
~ void taxAction(Tax)
~ void goToJailAction(GoToJail)
~ Field ferryAction(Ferry)
~ void chanceFieldAction(ChanceField)
~ Field breweryAction(Brewery)
}
class enities.fields.GoToJail {
+ Field executeFieldAction(FieldAction)
}


enities.fields.RentableField <|-- enities.fields.Ferry
enities.fields.RentableField <|-- enities.fields.Street
enities.fields.Field <|-- enities.fields.Tax
enities.fields.Field <|-- enities.fields.Start
enities.fields.Field <|-- enities.fields.ChanceField
enities.fields.Field <|-- enities.fields.Jail
enities.fields.RentableField <|-- enities.fields.Brewery
enities.fields.Field <|-- enities.fields.RentableField
enities.fields.Field <|-- enities.fields.Parking
enities.fields.Field <|-- enities.fields.GoToJail
enities.fields.FieldAction ..>enities.fields.Field
@enduml